--- a/Exemplo01.html
+++ b/Exemplo01.html
@@ -11,6 +11,12 @@
 
 </head>
 <body>
+
+    <label>Logradouro</label>
+    <input type="text" id="logradouro">
+
+    <label>Localidade</label>
+    <input type="text" id="localidade">
     
 </body>
 </html>
